[package]
name = "maybe-serde"
version = "0.2.0"
authors = ["Riey <creeper844@gmail.com>"]
keywords = ["serde", "maybe", "specialization"]
edition = "2018"
license = "MIT"
description = "maybe impl for serde"
repository = "https://github.com/Riey/maybe-serde"
homepage = "https://github.com/Riey/maybe-serde"
readme = "README.md"
categories = ["encoding"]

[dependencies]
serde = "1.0.87"

[dev-dependencies]
serde_json = "1.0.38"
serde_derive = "1.0.87"
